Fix broken line breaks on tooltips

--- a/styles/tachyons-overrides.css
+++ b/styles/tachyons-overrides.css
@@ -66,6 +66,10 @@
   line-height: 1;
 }
 
+.pre-line {
+  white-space: pre-line;
+}
+
 /**
  * Flexbox
  */
